--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     <div align = "center"><font id="myInfo1" size="7"></font></div>
     <br>
     <br>
-    <div align = "center"><font size="7">Being Better Man !!!</font></div>
+    <br>
+    <div align = "center"><font size="7">Doing Important Things</font></div>
+    <div align = "center"><font size="7">And</font></div>
+    <div align = "center"><font size="7">Being Better Man</font></div>
 </body>
 
 </html>
