--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <br>
     <div align = "center"><font size="7">Doing Important Things</font></div>
     <div align = "center"><font size="7">And</font></div>
-    <div align = "center"><font size="7">Being Better Man</font></div>
+    <div align = "center"><font size="7">Being Stronger</font></div>
 </body>
 
 </html>
