--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <br>
     <br>
     <br>
-    <div align = "center"><font size="7">Doing Important Things</font></div>
+    <div align = "center"><font size="7">Doing Effective Things</font></div>
     <div align = "center"><font size="7">And</font></div>
     <div align = "center"><font size="7">Being Stronger</font></div>
 </body>
